unpackaged/objects/BE_Bug__c.object
<CustomObject>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <picklist>
            <picklistValues>
                <fullName>Fix ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix If Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Developer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BrainEngine_Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BrainEngine_Bugs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BrainEngine_Bugs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>BE_Release__c</referenceTo>
        <relationshipLabel>BrainEngine Bugs</relationshipLabel>
        <relationshipName>BrainEngine_Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Blocking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>BE_User_Story__c</referenceTo>
        <relationshipLabel>BrainEngine Bugs</relationshipLabel>
        <relationshipName>BrainEngine_Bugs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BrainEngine Bug</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Bug-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BrainEngine Bugs999</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>